@@ -78,7 +78,7 @@ Developer experiments     TRY-<developer>-<short-desc>
                  |                             |
                  360<--------------------------359
                  |                             |
-                 |                             |(merge needed, rev 375)
+                 |  <--------------------------375
                  |                             |
                  |                             v RB-2.1
                  |
