@@ -1,3 +1,9 @@
+2007-09-27 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
+
+	* merged from RB-branches/2.1 (last changed rev. 375 there)
+	  * add test libconfix/core/filesys/tests/scan.py
+	  * InstalledNode.short_description() was left abstract; fixed.
+
 2007-09-05 Joerg Faschingbauer <joerg.faschingbauer@aon.at>
 
 	* BuildInfo_CIncludePath_NativeLocal does not carry any
